--- a/app/views/downloads/download_windows.html.erb
+++ b/app/views/downloads/download_windows.html.erb
@@ -10,12 +10,28 @@
   <h1>Downloading Git</h1>
   <div class="callout downloading">
     <h3>Your download is starting...</h3>
-    <p>
-      <%= raw "You are downloading the latest (<strong>#{@download.version.name}</strong>) <strong>#{@bitness}</strong> version of <strong>Git for Windows</strong>. This is the most recent <a href='#{@project_url}'>maintained build</a>. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}." %>
-    </p>
-    <p>
-      <%= raw "<strong>If your download hasn't started, <a href=\"#{@download.url}\">click here to download manually</a>.</strong>" %>
-    </p>
+    <script>
+        if (navigator.userAgent.search('WOW64|Win64') != -1) {
+            var version             = '<%= @download64.version.name %>';
+            var bitness             = '64-bit';
+            var time_ago_in_words   = '<%= time_ago_in_words @download64.release_date %>';
+            var release_date        = '<%= @download64.release_date.strftime("%Y-%m-%d") %>';
+            var download_url        = '<%= @download64.url %>';
+        } else {
+            var version             = '<%= @download32.version.name %>';
+            var bitness             = '32-bit';
+            var time_ago_in_words   = '<%= time_ago_in_words @download32.release_date %>';
+            var release_date        = '<%= @download32.release_date.strftime("%Y-%m-%d") %>';
+            var download_url        = '<%= @download32.url %>';
+        }
+
+        document.write(
+            '<p>You are downloading the latest (<strong>' + version + '</strong>) <strong>' + bitness + '</strong> version' +
+            ' of <strong>Git for Windows</strong>. This is the most recent <a href="<%= @project_url %>">maintained build</a>.' +
+            ' It was released <strong>' + time_ago_in_words + ' ago</strong>, on ' + release_date + '.</p>' +
+            '<p><strong>If your download hasn\'t started, <a href="' + download_url + '">click here to download manually</a>.</strong></p>'
+        );
+    </script>
     <h3>Other Git for Windows downloads</h3>
     <h4>Git for Windows Setup</h4>
     <p>
@@ -34,7 +50,11 @@
     <p class="small">
       <%= raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>." %>
     </p>
-    <iframe frameborder="0" height="1" src="<%= @download.url %>" width="1"></iframe>
+    <script>
+        document.write(
+            '<iframe frameborder="0" height="1" src="' + download_url + '" width="1"></iframe>'
+        );
+    </script>
   </div>
   <h2>Now What?</h2>
   <p>
