--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -41,6 +41,7 @@ Translations started for
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
   <a href="/book/th">ภาษาไทย</a>,
+  <a href="/book/tl">Tagalog</a>,
   <a href="/book/vi">Tiếng Việt</a>,
   <a href="/book/uk">Українська</a> and
   <a href="/book/uz/v2">Ўзбекча</a>.
