clean up links to /documentation
We mostly use "/doc", so let's try to be consistent.

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -80,7 +80,7 @@
 
     <h2> External Links </h2>
     <p>
-      The <%= link_to "External Links section", "/documentation/external-links" %> is a curated, ever-evolving collection of tutorials, books, videos, and other Git resources.
+      The <%= link_to "External Links section", "/doc/ext" %> is a curated, ever-evolving collection of tutorials, books, videos, and other Git resources.
     </p>
 
   </div>
