--- a/app/views/shared/_masthead.html.erb
+++ b/app/views/shared/_masthead.html.erb
@@ -7,7 +7,7 @@
     </p>
 
     <p>
-      Git is <%= link_to "easy to learn", "/documentation" %> and has a
+      Git is <%= link_to "easy to learn", "/doc" %> and has a
       <%= link_to "tiny footprint with lightning fast performance", "/about/small-and-fast" %>.
       It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase
       with features like <%= link_to "cheap local branching", "/about/branching-and-merging" %>,
