basic fix of bad everyday git cross link

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -16,7 +16,7 @@
           </p>
         </li>
         <li>
-          <h4><a href="/docs/everyday">Everyday Git</a></h4>
+          <h4><a href="/docs/giteveryday">Everyday Git</a></h4>
           <p class='description'>
             Learn the basics with 20 of the most common commands.
           </p>
