--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -3,6 +3,6 @@
 <div id="main">
   <h1>Moved!</h1>
 
-  <p>Technical content that was previously found in the blog section of this site has been integrated into the <a href="/book">second edition of the Pro Git book</a>.
+  <p>Technical content that was previously found in the blog section of this site has been integrated into the <%= link_to('second edition of the Pro Git book', controller: 'books', action: 'show') %>.
 
 </div>
