Restructure css directory

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,7 @@
 
   <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
 
-  <%= stylesheet_link_tag "git-scm.css" %>
-  <%= javascript_include_tag "modernizr.js", "modernizr-tests.js" %>
-  <!--[if (gte IE 6)&(lte IE 8)]>
-  <%= javascript_include_tag "/javascripts/selectivizr-min.js" %>
-  <![endif]-->
-
+  <%= stylesheet_link_tag "index.css" %>
 </head>
 
 <body id="<%= @section %>">
