--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,15 +1,53 @@
-<header>
-
-  <a href="/"><img src="/images/logo@2x.png" width="110" height="46" alt="Git" /></a>
-  <span id="tagline"></span>
-  <script type="text/javascript">
-    var taglines = <%= raw JSON.generate(TAGLINES) %>;
-    var tagline = taglines[Math.floor(Math.random() * taglines.length)];
-    document.getElementById('tagline').innerHTML = '--' + tagline;
-  </script>
+<!--
   <form id="search" action="/search/results">
     <input id="search-text" name="search" placeholder="Search entire site..." autocomplete="off" type="text" />
   </form>
   <div id="search-results"></div>
+-->
 
+<header class="flex flex-column flex-row-l pv3 pv3-l ph3 ph4-m ph5-l mb3 w-100 bb bb-0-l b--moon-gray js-site-header">
+  <div class="flex flex-row justify-between items-center w-100">
+    <div class="site-logo tc tl-l tl-m pr3-l order-1 order-0-l w4 z-1">
+      <a href="/"><img src="/images/git-logo-full.svg" class="w-70 w-100-l" alt="Git"></a>
+    </div>
+    <nav class="site-nav f5 fw5 flex-auto-l nowrap order-0 order-1-l pr4-m pr5-l z-0">
+      <a href="#" class="near-black order-2 dn-l js-nav-link">
+        <!-- Menu icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+      </a>
+
+      <ul class="site-nav-links list w-100 w-auto-l pl0 dn db-l tl tr-l absolute relative-l left-0 top-2 top-0-l ph3 ph4-m ph0-l pv3 pv0-l bb bb-0-l b--moon-gray js-site-nav">
+        <li class="db dib-l pv2 ph2-l">
+          <a href="#" class="link near-black hover-blue pv2">About</a>
+        </li>
+        <li class="db dib-l pv2 ph2-l">
+          <a href="#" class="link near-black hover-blue pv2">Manual</a>
+        </li>
+        <li class="db dib-l pv2 ph2-l">
+          <a href="#" class="link near-black hover-blue pv2">Book</a>
+        </li>
+        <li class="db dib-l pv2 ph2-l">
+          <a href="#" class="link near-black hover-blue pv2">Download</a>
+        </li>
+        <li class="db dib-l pv2 pl2-l">
+          <a href="#" class="link near-black hover-blue pv2">Resources</a>
+        </li>
+        <li class="db dib-l pv2 pl2-l">
+          <a href="#" class="link near-black hover-blue pv2">Community</a>
+        </li>
+      </ul>
+    </nav>
+    <a href="#" class="near-black order-2 tr dn-l js-search-link">
+      <!-- Search icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="search-link-search js-icon-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+
+      <!-- X icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="dn search-link-x js-icon-search-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+    </a>
+    <div class="search-box pv-0 order-3 dn db-l w-80 w-25-l absolute relative-l">
+      <form action="#">
+        <input type="search" class="input-reset outline-0 pv1 ph2 br2 ba b--moon-gray hover-b-orange hover-shadow-orange w-100 js-search-input" placeholder="Search…">
+      </form>
+    </div>
+  </div>
 </header>
