--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,52 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-49925874-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-49925874-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      gtag('config', 'UA-49925874-3');
+    </script>
 
-    gtag('config', 'UA-49925874-3');
-  </script>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title><%= @page_title.present? ? @page_title : "Git" %></title>
+    <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+    <%= stylesheet_link_tag "index.css" %>
+  </head>
 
-  <meta charset='utf-8'>
-  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-
-  <title><%= @page_title.present? ? @page_title : "Git" %></title>
-
-  <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
-
-  <%= stylesheet_link_tag "index.css" %>
-</head>
-
-<body id="<%= @section %>">
-
-  <div class="inner">
+  <body class="sans-serif bg-tan dark-gray mw9 center" id="<%= @section %>">
     <%= render partial: "shared/header" %>
-  </div> <!-- .inner -->
 
-  <% if controller_name == "site" && action_name == "index" %>
-    <%= render partial: "shared/masthead" %>
-    <div id="content-wrapper">
-      <div class="inner">
-        <%= yield %>
-        <%= render partial: "shared/footer" %>
-      </div> <!-- .inner -->
-    </div> <!-- #content-wrapper -->
-  <% else %>
-    <div class="inner">
-      <div id="content-wrapper">
-        <%= render partial: "shared/sidebar" %>
-        <div id="content">
-          <%= yield %>
-        </div>
-      </div>
-      <%= render partial: "shared/footer" %>
-    </div>
-  <% end %>
+    <% if controller_name == "site" && action_name == "index" %>
+      <%= render partial: "shared/masthead" %>
+    <% end %>
 
-</body>
+    <%= yield %>
+
+    <%= render partial: "shared/footer" %>
+  </body>
 </html>
