Update topic list styling

--- a/app/views/shared/ref/_admin.html.erb
+++ b/app/views/shared/ref/_admin.html.erb
@@ -1,11 +1,11 @@
-<h3 class='admin'>Administration</h3>
-<ul class='unstyled'>
-  <li><%= man('git-clean') %></li>
-  <li><%= man('git-gc') %></li>
-  <li><%= man('git-fsck') %></li>
-  <li><%= man('git-reflog') %></li>
-  <li><%= man('git-filter-branch') %></li>
-  <li><%= man('git-instaweb') %></li>
-  <li><%= man('git-archive') %></li>
-  <li><%= man('git-bundle') %></li>
+<h3 class="f6 fw6">Administration</h3>
+<ul class="list pl0">
+  <li><%= man("git-clean", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-gc", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-fsck", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-reflog", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-filter-branch", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-instaweb", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-archive", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-bundle", :class => "link hover-u blue f6") %></li>
 </ul>
