--- a/app/views/shared/ref/_branching.html.erb
+++ b/app/views/shared/ref/_branching.html.erb
@@ -1,11 +1,11 @@
-<h3 class='branching'>Branching and Merging</h3>
-<ul class='unstyled'>
-  <li><%= man('git-branch') %></li>
-  <li><%= man('git-checkout') %></li>
-  <li><%= man('git-merge') %></li>
-  <li><%= man('git-mergetool') %></li>
-  <li><%= man('git-log') %></li>
-  <li><%= man('git-stash') %></li>
-  <li><%= man('git-tag') %></li>
-  <li><%= man('git-worktree') %></li>
+<h3 class="f6 fw6">Branching and merging</h3>
+<ul class="list pl0">
+  <li><%= man("git-branch", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-checkout", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-merge", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-mergetool", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-log", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-stash", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-tag", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-worktree", :class => "link hover-u blue f6") %></li>
 </ul>
