--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -1,11 +1,11 @@
-<h3 class='guides'>Guides</h3>
-<ul class='unstyled'>
-  <li><%= man('gitattributes') %></li>
-  <li><%= man('giteveryday', 'Everyday Git') %></li>
-  <li><%= man('gitglossary', 'Glossary') %></li>
-  <li><%= man('gitignore') %></li>
-  <li><%= man('gitmodules') %></li>
-  <li><%= man('gitrevisions', 'Revisions') %></li>
-  <li><%= man('gittutorial', 'Tutorial') %></li>
-  <li><%= man('gitworkflows', 'Workflows') %></li>
+<h3 class="f6 fw6">Guides</h3>
+<ul class="list pl0">
+  <li><%= man("gitattributes", :class => "link hover-u blue f6") %></li>
+  <li><%= man("giteveryday", :text => "Everyday Git", :class => "link hover-u blue f6") %></li>
+  <li><%= man("gitglossary", :text => "Glossary", :class => "link hover-u blue f6") %></li>
+  <li><%= man("gitignore", :class => "link hover-u blue f6") %></li>
+  <li><%= man("gitmodules", :class => "link hover-u blue f6") %></li>
+  <li><%= man("gitrevisions", :text => "Revisions", :class => "link hover-u blue f6") %></li>
+  <li><%= man("gittutorial", :text => "Tutorial", :class => "link hover-u blue f6") %></li>
+  <li><%= man("gitworkflows", :text => "Workflows", :class => "link hover-u blue f6") %></li>
 </ul>
