--- a/app/views/shared/ref/_patching.html.erb
+++ b/app/views/shared/ref/_patching.html.erb
@@ -1,8 +1,8 @@
-<h3 class='patching'>Patching</h3>
-<ul class='unstyled'>
-  <li><%= man('git-apply') %></li>
-  <li><%= man('git-cherry-pick') %></li>
-  <li><%= man('git-diff') %></li>
-  <li><%= man('git-rebase') %></li>
-  <li><%= man('git-revert') %></li>
+<h3 class="f6 fw6">Patching</h3>
+<ul class="list pl0">
+  <li><%= man("git-apply", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-cherry-pick", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-diff", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-rebase", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-revert", :class => "link hover-u blue f6") %></li>
 </ul>
