--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -2,12 +2,45 @@
 <% @subsection = 'reference' %>
 
 <% cache @doc do %>
-  <div id='reference-version'>
-    <%= render 'doc/topics' %>
-    <%= render 'doc/versions' %>
+  <div class="flex flex-column flex-row-l ph3 ph4-m ph5-l">
+    <div class="order-1 order-0-l w-100 w-75-l pr0 pr5-l">
+      <div class="flex justify-between">
+        <div class="f6">
+          <a href="#" class="link blue b mr2">
+            Version 2.16.1
+            <!-- Down chevron icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-btm"><polyline points="6 9 12 15 18 9"></polyline></svg>
+          </a>
+          <span class="dn di-l mid-gray">git-shortlog last updated in 2.16.1</span>
+        </div>
+      </div>
+
+      <%=raw @doc.html %>
+
+    </div>
+
+    <!-- Sidebar links -->
+    <div class="order-0 order-1-l dn_ db-l w-25-l">
+      <div class="dib dn-l f6">
+        <a href="#" class="link blue b">
+          Topics
+          <!-- Down chevron icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-btm"><polyline points="6 9 12 15 18 9"></polyline></svg>
+        </a>
+      </div>
+      <div class="bg-dark-tan pv3 ph4 br2">
+        <%= render 'doc/topics' %>
+
+        <%# <h3 class="f6 fw6">Setup and config</h3> %>
+        <%# <ul class="list pl0"> %>
+        <%#   <li><a href="/docs/git" class="link hover-u blue f6">git</a></li> %>
+        <%#   <li><a href="/docs/git-config" class="link hover-u blue f6">config</a></li> %>
+        <%#   <li><a href="/docs/git-help" class="link hover-u blue f6">help</a></li> %>
+        <%# </ul> %>
+      </div>
+    </div>
   </div>
 
-  <div id='main'>
-    <%=raw @doc.html %>
-  </div>
+  <%# render 'doc/versions' %>
+
 <% end %>
