--- a/app/views/shared/ref/_snapshot.html.erb
+++ b/app/views/shared/ref/_snapshot.html.erb
@@ -1,10 +1,10 @@
-<h3 class='snapshotting'>Basic Snapshotting</h3>
-<ul class='unstyled'>
-  <li><%= man('git-add') %></li>
-  <li><%= man('git-status') %></li>
-  <li><%= man('git-diff') %></li>
-  <li><%= man('git-commit') %></li>
-  <li><%= man('git-reset') %></li>
-  <li><%= man('git-rm') %></li>
-  <li><%= man('git-mv') %></li>
+<h3 class="f6 fw6">Basic snapshotting</h3>
+<ul class="list pl0">
+  <li><%= man("git-add", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-status", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-diff", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-commit", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-reset", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-rm", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-mv", :class => "link hover-u blue f6") %></li>
 </ul>
