Fix sentence casing

--- a/app/views/shared/ref/_plumbing.html.erb
+++ b/app/views/shared/ref/_plumbing.html.erb
@@ -1,4 +1,4 @@
-<h3 class="f6 fw6">Plumbing Commands</h3>
+<h3 class="f6 fw6">Plumbing commands</h3>
 <ul class="list pl0">
   <li><%= man("git-cat-file", :class => "link hover-u blue f6") %></li>
   <li><%= man("git-check-ignore", :class => "link hover-u blue f6") %></li>
