Highlight active section

--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,5 +1,4 @@
-<% @section    = 'documentation' %>
-<% @subsection = 'reference' %>
+<% @section    = "manual" %>
 
 <% cache @doc do %>
   <div class="flex flex-column flex-row-l ph3 ph4-m ph5-l">
