--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -88,6 +88,12 @@
           <p class='description'>
             Your Guide to deliver great code using TFS and Git.
           </p>
+        </li>
+        <li>
+          <h4><a href="https://www.packtpub.com/networking-and-servers/complete-git-and-github-masterclass-beginner-git-expert-video">Complete Git and GitHub Masterclass : Beginner to Git Expert [Video]</a></h4>
+          <p class='description'>
+            Most comprehensive, STEP by STEP Git & GitHub tutorial with great examples; Upcoming: Git Workflow, BitBucket and more!
+          </p>
         </li>	      
       </ul>
     </div>
