Add version details/summary widget

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -37,3 +37,7 @@
  * Fonts
  */
 code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace; }
+
+.no-summary-marker::-webkit-details-marker {
+  display: none;
+}
