--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -38,6 +38,19 @@
  */
 code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace; }
 
-.no-summary-marker::-webkit-details-marker {
+/*
+ * Heights
+ */
+.max-vh-50 { max-height: 50vh; }
+
+/*
+ * Negative margins
+ */
+.nl-1px { margin-left: -1px;}
+
+/*
+ * Misc
+ */
+.no-details-marker::-webkit-details-marker {
   display: none;
 }
