--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,5 +1,5 @@
 <details>
-  <summary class="f6 list outline-0 pointer no-summary-marker">
+  <summary class="f6 list outline-0 pointer no-details-marker">
     <span class="link blue b mr2">
       Version <%= @version.name %>
       <!-- Down chevron icon -->
@@ -8,23 +8,23 @@
     <span class="dn di-l mid-gray"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
   </summary>
 
-  <div class="relative absolute-l bg-white pa3 br2 mt2 w-100 w-50-l shadow-0 shadow-1-l">
-    <div class="f6">Changes in the <span class="b"><%= @doc_file.name %></span> manual</div>
-    <ol class="list pl0">
+  <div class="relative absolute-l bg-white pv3 br2 mt2 w-100 mw6-l shadow-0 shadow-1-l">
+    <div class="f6 ph3">Changes in the <span class="b"><%= @doc_file.name %></span> manual</div>
+    <ol class="list pl0 max-vh-50 overflow-scroll relative">
       <% @doc_file.version_changes.each do |v| %>
         <% if v[:changed] %>
           <li>
-            <a href="/docs/<%= @doc_file.name %>/<%= v[:name] %>" class="pv1 db f6 link blue hover-bg-blue">
+            <a href="/docs/<%= @doc_file.name %>/<%= v[:name] %>" class="pv1 ph3 db f6 link blue hover-bg-near-white">
               <span class="b dib w3"><%= v[:name] %></span>
-              <span class="dn dib-l w4 pr2">
+              <span class="dn dib-l w3 pr2">
                 <% v[:diff][0].times do %>
-                  <img src="/images/icons/green-dot.png" />
+                  <img src="/images/icons/green-dot.png" class="nl-1px" />
                 <% end %>
                 <% v[:diff][1].times do %>
-                  <img src="/images/icons/red-dot.png" />
+                  <img src="/images/icons/red-dot.png" class="nl-1px" />
                 <% end %>
                 <% v[:diff][2].times do %>
-                  <img src="/images/icons/grey-dot.png" />
+                  <img src="/images/icons/grey-dot.png" class="nl-1px" />
                 <% end %>
               </span>
               <span class="dib dark-gray"><%= v[:time].strftime("%m/%d/%y") %></span>
@@ -35,7 +35,7 @@
         <% end %>
       <% end %>
     </ol>
-    <div class="f6">
+    <div class="ph3 f6">
       <span class="mid-gray">Check your version of git by running<br></span>
       <code>git --version</code>
     </div>
