--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -44,13 +44,26 @@ code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace;
 .max-vh-50 { max-height: 50vh; }
 
 /*
+ * Box shadows
+ */
+.shadow-1-l { box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07); }
+
+/*
  * Negative margins
  */
 .nl-1px { margin-left: -1px;}
 
 /*
- * Misc
+ * Details / summary toggle
  */
 .no-details-marker::-webkit-details-marker {
   display: none;
+}
+
+details .icon-chevron {
+  transition: transform .1s ease-in;
+}
+
+details[open] .icon-chevron {
+  transform: rotate(180deg);
 }
