--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -3,7 +3,7 @@
     <span class="link blue b mr2">
       Version <%= @version.name %>
       <!-- Down chevron icon -->
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-btm"><polyline points="6 9 12 15 18 9"></polyline></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon-chevron v-btm"><polyline points="6 9 12 15 18 9"></polyline></svg>
     </span>
     <span class="dn di-l mid-gray"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
   </summary>
