Add more external resources links from TODO

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -34,6 +34,12 @@
             ( <a href="https://backlog.com/git-tutorial/kr/">Korean</a> / <a href="https://backlog.com/git-tutorial/cn/">Simplified Chinese</a> / <a href="https://backlog.com/git-tutorial/tw/">Traditional Chinese</a> / <a href="https://backlog.com/git-tutorial/vn/">Vietnamese</a> )
           </p>
         </li>
+        <li>
+          <h4><a href="http://git.github.io/git-reference/">Git Reference</a></h4>
+          <p class='description'>
+            The Git Reference site is meant to be a quick reference for learning and remembering the most important and commonly used Git commands.
+          </p>
+        </li>
       </ul>
     </div>
     <div class='column-right'>
@@ -89,12 +95,11 @@
             Your Guide to deliver great code using TFS and Git.
           </p>
         </li>
-        <li>
-          <h4><a href="https://www.packtpub.com/application-development/conquering-git-advanced-training-guide-video">Conquering Git: Advanced Training Guide [Video]</a></h4>
+          <h4><a href="https://try.github.io/">Git Tutorial - Try Git</a></h4>
           <p class='description'>
-            Master versioning and manage your code with Git by controlling its workflow and using it for your projects.
+            Learn how to use Git by reviewing the basic concepts of Git version control.
           </p>
-        </li>	      
+        </li>
       </ul>
     </div>
   </div>
