Refactor external resources page into several partials

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -4,254 +4,13 @@
 
 <div id='main'>
   <h1>External Links</h1>
-  <h2>Tutorials</h2>
-  <div class='two-column'>
-    <div class='column-left'>
-      <h3>Short &amp; Sweet</h3>
-      <ul class='content-list'>
-        <li>
-          <h4><a href="/docs/gittutorial">Official Git Tutorial</a></h4>
-          <p class='description'>
-            The official gittutorial man page is a good place to start.
-          </p>
-        </li>
-        <li>
-          <h4><a href="/docs/giteveryday">Everyday Git</a></h4>
-          <p class='description'>
-            Learn the basics with 20 of the most common commands.
-          </p>
-        </li>
-        <li>
-          <h4><a href="http://gitimmersion.com/">Git Immersion</a></h4>
-          <p class='description'>
-            A guided tour that walks through the fundamentals of Git.
-          </p>
-        </li>
-        <li>
-          <h4><a href="https://backlog.com/git-tutorial/en/">Git Beginner's Guide for Dummies</a></h4>
-          <p class='description'>
-            This guide includes an introduction for complete beginners as well as hands-on tutorials for intermediate learners.
-            ( <a href="https://backlog.com/git-tutorial/kr/">Korean</a> / <a href="https://backlog.com/git-tutorial/cn/">Simplified Chinese</a> / <a href="https://backlog.com/git-tutorial/tw/">Traditional Chinese</a> / <a href="https://backlog.com/git-tutorial/vn/">Vietnamese</a> )
-          </p>
-        </li>
-        <li>
-          <h4><a href="http://git.github.io/git-reference/">Git Reference</a></h4>
-          <p class='description'>
-            The Git Reference site is meant to be a quick reference for learning and remembering the most important and commonly used Git commands.
-          </p>
-        </li>
-      </ul>
-    </div>
-    <div class='column-right'>
-      <h3>Diving Deeper</h3>
-      <ul class='content-list'>
-        <li>
-          <h4><a
-		  href="https://web.archive.org/web/20161121145226/http://rypress.com:80/tutorials/git/index">Ry&rsquo;s Git
-		  Tutorial</a></h4>
-          <p class='description'>
-			A hands-on introduction to the entire Git porcelain.
-          </p>
-        </li>
-        <li>
-          <h4><a href="https://web.archive.org/web/20150301060509/http://hoth.entp.com/output/git_for_designers.html">Git for Designers</a></h4>
-          <p class='description'>
-            No knowledge of version control? No problem.
-          </p>
-        </li>
-        <li>
-          <h4><a href="http://eagain.net/articles/git-for-computer-scientists/">Git for Computer Scientists</a></h4>
-          <p class='description'>
-            A quick introduction to Git internals for people who aren't scared by words like Directed Acyclic Graph.
-          </p>
-        </li>
-        <li>
-          <h4><a href="https://github.com/sensorflo/git-draw/wiki">git-draw</a></h4>
-          <p class='description'>
-            git-draw is a small tool that draws nearly the full content of a tiny git repository as a graph. It helps people with an engineering background learning Git's internals.
-          </p>
-        </li>
-        <li>
-          <h4><a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/">Git Magic</a></h4>
-          <p class='description'>
-            An alternative book with the source <a href="https://github.com/blynn/gitmagic/tree/master">online</a>.
-          </p>
-        </li>
-        <li>
-          <h4><a href="https://help.github.com/">Help.GitHub</a></h4>
-          <p class='description'>
-            Guides on a variety of Git and GitHub related topics.
-          </p>
-        </li>
-        <li>
-          <h4><a href="https://www.packtpub.com/application-development/git-version-control-made-easy">Git: Version Control Made Easy</a></h4>
-          <p class='description'>
-            Use the powerful features of Git in your projects.
-          </p>
-        </li>
-       <li>
-          <h4><a href="https://www.packtpub.com/web-development/version-control-git-video">Version Control with Git [Video]</a></h4>
-          <p class='description'>
-            Your Guide to deliver great code using TFS and Git.
-          </p>
-        </li>
-          <h4><a href="https://try.github.io/">Git Tutorial - Try Git</a></h4>
-          <p class='description'>
-            Learn how to use Git by reviewing the basic concepts of Git version control.
-          </p>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <h2>Books</h2>
-  <div class='two-column'>
-    <div class='column-left'>
-      <ul class='books-list'>
-        <li>
-          <a href="/book"><img src="/images/progit2.png" width="107" height="141" /></a>
-          <h4><a href="/book">Pro Git</a></h4>
-          <p class='description'>
-            By Scott Chacon and Ben Straub
-            <img class="creative-commons" src="/images/creative-commons@2x.png" width="115" height="28" />
-          </p>
-        </li>
-        <li>
-         <a href="https://www.packtpub.com/application-development/mastering-git"><img src="https://d1ldz4te4covpm.cloudfront.net/sites/default/files/imagecache/ppv4_main_book_cover/3754OS_3537_Mastering%20Git_0.jpg" width="107"></a>
-         <h4><a href="https://www.packtpub.com/application-development/mastering-git">Mastering Git</a></h4>
-         <p class='description'>
-           By Jakub Narębski
-         </p>
-        </li>
-        <li>
-          <a href="https://www.manning.com/mcquaid/?a_aid=MikeMcQuaid&a_bid=5688bbf4"><img src="https://www.manning.com/mcquaid/mcquaid_cover150.jpg" width="107"></a>
-          <h4><a href="https://www.manning.com/mcquaid/?a_aid=MikeMcQuaid&a_bid=5688bbf4">Git in Practice</a></h4>
-          <p class='description'>
-            By Mike McQuaid
-          </p>
-        </li>
-        <li>
-          <a href="https://cbx33.github.io/gitt/"><img src="/images/books/git-in-the-trenches@2x.jpg" /></a>
-          <h4><a href="https://cbx33.github.io/gitt/">Git in the Trenches</a></h4>
-          <p class='description'>
-            By Peter Savage
-            <img class="creative-commons" src="/images/creative-commons.png" />
-        </li>
-        <li>
-          <a href="https://www.packtpub.com/git-version-control-for-everyone/book"><img src="https://www.packtpub.com/sites/default/files/7522OS_mockupcover_bg_0.jpg" width="107"/></a>
-          <h4><a href="https://www.packtpub.com/git-version-control-for-everyone/book">Git: Version Control for Everyone</a></h4>
-          <p class='description'>
-            By Ravishankar Somasundaram
-          </p>
-         </li>
-        <li>
-         <a href="https://www.packtpub.com/application-development/git-essentials-second-edition"><img src="https://www.packtpub.com/sites/default/files/B06881.png" width="113"/></a>
-         <h4><a href="https://www.packtpub.com/application-development/git-essentials-second-edition">Git Essentials - Second Edition</a></h4>
-         <p class='description'>
-           By Ferdinando Santacroce
-         </p>
-        </li>	      
-      </ul>
-    </div>
-    <div class='column-right'>
-      <ul class='books-list'>
-        <li>
-          <a href="https://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123"><img src="/images/books/version-control-with-git@2x.jpg" width="107" height="140" /></a>
-          <h4><a href="https://www.amazon.com/Version-Control-Git-collaborative-development/dp/1449316387">Version Control with Git, 2nd ed.</a></h4>
-          <p class='description'>
-            By Jon Loeliger &amp; Matthew McCullough
-          </p>
-        </li>
-        <li>
-          <a href="https://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git"><img src="/images/books/pragmatic-guide-to-git@2x.jpg" width="107" height="162" /></a>
-          <h4><a href="https://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git">Pragmatic Guide to Git</a></h4>
-          <p class='description'>
-            By Travis Swicegood
-          </p>
-        </li>
-        <li>
-          <a href="https://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git"><img src="/images/books/pragmatic-version-control@2x.jpg" width="107" height="128" /></a>
-          <h4><a href="https://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git">Pragmatic Version Control Using Git</a></h4>
-          <p class='description'>
-            By Travis Swicegood
-          </p>
-        </li>
-        <li>
-          <a href="https://github.com/pluralsight/git-internals-pdf/releases/download/v2.0/peepcode-git.pdf"><img src="/images/books/git-internals@2x.jpg" width="107" height="81" /></a>
-          <h4><a href="https://github.com/pluralsight/git-internals-pdf/releases/download/v2.0/peepcode-git.pdf">Git Internals Peepcode PDF</a></h4>
-          <p class='description'>
-            By Scott Chacon
-            <img class="creative-commons" src="/images/creative-commons@2x.png" width="115" height="28" />
-          </p>
-        </li>
-        <li>
-          <a href="https://www.packtpub.com/application-development/git-version-control-cookbook"><img src="https://dgdsbygo8mp3h.cloudfront.net/sites/default/files/imagecache/ppv4_main_book_cover/8454OS_cov.jpg" width="107"></a>
-          <h4><a href="https://www.packtpub.com/application-development/git-version-control-cookbook">Git Version Control Cookbook</a></h4>
-          <p class='description'>
-            By Aske Olsson and Rasmus Voss
-          </p>
-        </li>
-	<li>
-	  <a href="https://www.manning.com/books/learn-git-in-a-month-of-lunches"><img src="https://www.manning.com/umali/umali_cover150.jpg" width="107"></a>
-	  <h4><a href="https://www.manning.com/books/learn-git-in-a-month-of-lunches">Learn Git in a Month of Lunches</a></h4>
-	  <p class='description'>
-	    By Rick Umali
-	  </p>
-	</li>
-      </ul>
-    </div>
-  </div>
-  <h2>Videos</h2>
-  <div class='two-column'>
-    <div class='column-left'>
-      <ul class='video-thumbnails'>
-        <li>
-          <a href="https://www.youtube.com/watch?v=4XpnKHJAok8"><img src="/images/videos/linus@2x.jpg" width="294" height="180" /></a>
-          <h4><a href="https://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on Git</a></h4>
-          <p class='description'>
-            Linus Torvalds visits Google to share his thoughts on Git, the SCM system he created.
-          </p>
-        </li>
-      </ul>
-    </div>
-    <div class='column-right'>
-      <ul class='video-thumbnails'>
-        <li>
-          <a href="https://www.youtube.com/watch?v=ZDR433b0HJY"><img src="/images/videos/introgit@2x.jpg" width="294" height="180" /></a>
-          <h4><a href="https://www.youtube.com/watch?v=ZDR433b0HJY">Introduction to Git: Scott Chacon</a></h4>
-          <p class='description'>
-            This talk introduces the Git Version Control System by looking at what Git is doing when you run the commands you need to do basic version control with it.
-          </p>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <h2>Courses</h2>
-  <div class='two-column'>
-    <div class='column-left'>
-      <ul class='course-list'>
-        <li>
-         <h4><a href="https://www.packtpub.com/application-development/git-mastering-version-control">Git: Mastering Version Control</a></h4>
-          <p class='description'>
-            By Ferdinando Santacroce, Aske Olsson, Rasmus Voss and Jakub Narębski
-          </p>
-        </li>
-        <li>
-         <h4><a href="https://www.packtpub.com/application-development/git-complete-video">Git Complete [Video Course]</a></h4>
-          <p class='description'>
-            A definitive, step-by-step guide to Git with easy to understand examples
-          </p>
-        </li>
-       </ul>
-     </div>
-     <div class='column-right'>
-      <ul class='course-list'>
-       <li>
-         <h4><a href="https://www.packtpub.com/application-development/git-version-control-made-easy">Git: Version Control Made Easy</a></h4>
-          <p class='description'>
-            Use the powerful features of Git in your projects
-          </p>
-        </li>
-       </ul>
-     </div>
-  </div>
+
+  <%= render "ext_tutorials" %>
+
+  <%= render "ext_books" %>
+
+  <%= render "ext_videos" %>
+
+  <%= render "ext_courses" %>
+
 </div>
