--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -88,6 +88,12 @@
           <p class='description'>
             Your Guide to deliver great code using TFS and Git.
           </p>
+        </li>
+        <li>
+          <h4><a href="https://www.packtpub.com/application-development/conquering-git-advanced-training-guide-video">Conquering Git: Advanced Training Guide [Video]</a></h4>
+          <p class='description'>
+            Master versioning and manage your code with Git by controlling its workflow and using it for your projects.
+          </p>
         </li>	      
       </ul>
     </div>
