[progit] Add malay language

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -38,10 +38,11 @@ Translations started for
   <a href="/book/hi">हिन्दी</a>,
   <a href="/book/hu">Magyar</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
+  <a href="/book/ms">Bahasa Melayu</a>,
   <a href="/book/pl">Polski</a>,
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
-  <a href="/book/th">ภาษาไทย</a>,  
+  <a href="/book/th">ภาษาไทย</a>,
   <a href="/book/tl">Tagalog</a>,
   <a href="/book/vi">Tiếng Việt</a>,
   <a href="/book/uk">Українська</a> and
