--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -37,6 +37,7 @@ Translations started for
   <a href="/book/fa" dir="rtl">یسراف</a>,
   <a href="/book/hi">हिन्दी</a>,
   <a href="/book/hu">Magyar</a>,
+  <a href="/book/ms">Bahasa Melayu</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
