Mobile topics styling

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -43,6 +43,28 @@ code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace;
  */
 .max-vh-50 { max-height: 50vh; }
 
+.max-vh-none {
+  max-height: none;
+}
+
+@media screen and (min-width: 30em) {
+  .max-vh-none-ns {
+    max-height: none;
+  }
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+  .max-vh-none-m {
+    max-height: none;
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .max-vh-none-l {
+    max-height: none;
+  }
+}
+
 /*
  * Box shadows
  */
