--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -31,7 +31,7 @@
             </a>
           </li>
         <% else %>
-          <li class="f6 mid-gray absolute right-1 nt2"><small><%=raw v[:name] %></small></li>
+          <li class="f6 mid-gray absolute right-1 mt1"><small><%=raw v[:name] %></small></li>
         <% end %>
       <% end %>
     </ol>
