--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,32 +1,24 @@
-<% @section    = "manual" %>
+<% @section = "manual" %>
 
 <% cache @doc do %>
-  <div class="flex flex-column flex-row-l ph3 ph4-m ph5-l">
-    <div class="order-1 order-0-l w-100 w-75-l pr0 pr5-l">
+  <div class="flex flex-column flex-row-l ph0 ph4-m ph5-l">
+    <div class="order-1 order-0-l w-100 w-75-l ph3 pl0-l pr5-l">
       <div class="flex justify-between">
         <div class="w-100">
           <%= render 'doc/versions' %>
         </div>
       </div>
-
       <%=raw @doc.html %>
-
     </div>
 
     <!-- Sidebar links -->
-    <div class="order-0 order-1-l dn_ db-l w-25-l">
-      <div class="dib dn-l f6">
-        <a href="#" class="link blue b">
-          Topics
-          <!-- Down chevron icon -->
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-btm"><polyline points="6 9 12 15 18 9"></polyline></svg>
-        </a>
-      </div>
-      <div class="bg-dark-tan pv3 ph4 br2">
+    <div class="order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray">
+      <a href="#" class="bg-dark-tan link blue b pv3 ph3 db dn-l f5">
+        Manual topics
+      </a>
+      <div class="bg-dark-tan dn db-l pv0 pv3-l ph3 ph4-l br2 max-vh-50 max-vh-none-l overflow-scroll">
         <%= render 'doc/topics' %>
       </div>
     </div>
   </div>
-
-
 <% end %>
