--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
   <div id="search-results"></div>
 -->
 
-<header class="flex flex-column flex-row-l pv3 pv3-l ph3 ph4-m ph5-l mb3 w-100 bb bb-0-l b--moon-gray js-site-header">
+<header class="flex flex-column flex-row-l pv3 pv3-l ph3 ph4-m ph5-l mb3-l w-100 bb bb-0-l b--moon-gray js-site-header">
   <div class="flex flex-row justify-between items-center w-100">
     <div class="site-logo tc tl-l tl-m pr3-l order-1 order-0-l w4 z-1">
       <a href="/"><img src="/images/git-logo-full.svg" class="w-70 w-100-l" alt="Git"></a>
