--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,8 @@
-<footer>
-  <div class="site-source">
-    This <a href="https://github.com/git/git-scm.com/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/git/git-scm.com">hosted on GitHub.</a><br>
-    Patches, suggestions and comments are welcome.
+<footer class="flex flex-column flex-row-l justify-between mh3 mh4-m mh5-l f6 mt3 pt4 pb5 mid-gray bt b--moon-gray">
+  <div>
+    Git is a member of <a href="/sfc" class="link blue">Software Freedom Conservancy</a>.
   </div>
-  <div class="sfc-member">
-    Git is a member of <a href="/sfc">Software Freedom Conservancy</a>
+  <div class="pv2 pv0-l">
+    This site is <a href="https://github.com/git/git-scm.com/blob/master/README.md#license" class="link blue">open source</a> and <a href="https://github.com/git/git-scm.com" class="link blue">hosted on GitHub.</a><br>
   </div>
 </footer>
