Add hover classes to footer links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="flex flex-column flex-row-l justify-between mh3 mh4-m mh5-l f6 mt3 pt4 pb5 mid-gray bt b--moon-gray">
   <div>
-    Git is a member of <a href="/sfc" class="link blue">Software Freedom Conservancy</a>.
+    Git is a member of <a href="/sfc" class="link blue hover-u">Software Freedom Conservancy</a>.
   </div>
   <div class="pv2 pv0-l">
-    This site is <a href="https://github.com/git/git-scm.com/blob/master/README.md#license" class="link blue">open source</a> and <a href="https://github.com/git/git-scm.com" class="link blue">hosted on GitHub.</a><br>
+    This site is <a href="https://github.com/git/git-scm.com/blob/master/README.md#license" class="link blue hover-u">open source</a> and <a href="https://github.com/git/git-scm.com" class="link blue hover-u">hosted on GitHub.</a><br>
   </div>
 </footer>
