Center community content

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,7 +1,7 @@
 <% @section = "community" %>
 <% @page_title = "Git - Community" %>
 
-<div class="w-100 w-75-l ph3 ph4-m ph5-l lh-copy dark-gray">
+<div class="ph3 ph4-m ph0-l lh-copy dark-gray mw7 center">
   <h1 class="f3">Community</h1>
 
   <h2 class="f4">Mailing list</h2>
